# python-project-50

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: climatecov.yml  pylint.yml  python-app.yml
gendiff/: __init__.py
gendiff/modules/: gendiff.py  generatediff.py  parsing.py
gendiff/scripts/: gendiff.py
tests/: test_comparing.py
tests/fixtures/: file2.yml
